---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/extern_fn_wrong_arg_type_fail.tapir
---
Error: Incorrect type, expected int but got fix
   ╭─[ extern_fn_wrong_arg_type_fail.tapir:3:17 ]
   │
 3 │ var x = compute(3.5, 4);
   │                 ─┬─  
   │                  ╰─── Incorrect type
───╯
Error: Incorrect type, expected fix but got int
   ╭─[ extern_fn_wrong_arg_type_fail.tapir:3:22 ]
   │
 3 │ var x = compute(3.5, 4);
   │                      ┬  
   │                      ╰── Incorrect type
───╯
